Fixing whitespace issues

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -17,7 +17,7 @@ $link-hover-color: #f82805;
 $light-gray: #fcfcfc;
 $footer-gray: #333;
 $fsek-orange-dark: #e35a04;
-
+$box-shadow-color: rgba(0, 0, 0, 0.25);
 
 $highlight: 0 1px 0 $white;
 $orange-highlight: #fc9800;
@@ -28,9 +28,7 @@ $border: #ddd;
 $text-color: $black;
 $border-color: $black;
 $box-color: $fsek-orange;
-
 $main-color: $fsek-orange;
-
 
 // Unify
 $unify-red: #e74c3c;
