--- a/app/assets/stylesheets/partials/_notifications.scss
+++ b/app/assets/stylesheets/partials/_notifications.scss
@@ -15,7 +15,7 @@
 
 .notification-list-wrap {
   border-radius: 4px 4px 4px 4px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 10px $box-shadow-color;
 }
 
 .notifications-list {
