--- a/app/assets/stylesheets/style/top.scss
+++ b/app/assets/stylesheets/style/top.scss
@@ -102,6 +102,7 @@
       padding: 0;
       position: static;
       z-index: 9999;
+      font-size: 0;
 
       > li {
         display: inline;
